Updated build for latest sbt idioms